libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/type-struct-has-type.jsonc
//@ run: fail
//@ description: struct type expression that has a type annotation is invalid
[
  "::kernel::special_form::type",
  "x",
  {
    "#struct": { "name": "String" },
    "#type": "(name: String)"
    //~^ ERROR Remove this type annotation
  },
  "x"
]
